--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeroHiro's Context NUI</title>
+    <title>NeroHiro's (edited by swkeep) | Context NUI </title>
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
@@ -17,6 +17,10 @@
         <div id="buttons"></div>
         <div id="imageHover">
             <img id="image" />
+        </div>
+    </div>
+    <div id="container-overlay">
+        <div id="infos">
         </div>
     </div>
 </body>
