--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeroHiro's (edited by swkeep) | Context NUI </title>
-    <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+    <title>https://github.com/swkeep/</title>
+    <!-- <script src="nui://game/ui/jquery.js" type="text/javascript"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./main.css" />
